--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1 th:text="${titulo}">TODO write content</h1>
+        <h1 th:text="${titulo}"></h1>
         
         <span th:text="${usuario.nombre}"></span>
         <span th:text="${usuario.apellido}"></span>
