--- a/src/main/resources/templates/params/index.html
+++ b/src/main/resources/templates/params/index.html
@@ -11,6 +11,7 @@
             <li><a th:href="@{/params/string(texto='Hola Esteban')}">Link: /params/string?texto=Hola Esteban</a></li>
             <li><a th:href="@{/params/string(texto='Que talca')}">Link: /params/string?texto=Que talca</a></li>
             <li><a th:href="@{/params/mix-params(saludo='Cómo estás? Esteban', numero=7)}">Link: /params/mix-params?texto=Cómo estás? Esteban & numero = 7</a></li>
+            <li><a th:href="@{/params/mix-params-request(saludo='Cómo estás? Esteban', numero=7)}">Link: /mix-params-request?texto=Cómo estás? Esteban & numero = 7</a></li>
         </ul>
 
     </body>
