--- a/src/main/resources/templates/variables/index.html
+++ b/src/main/resources/templates/variables/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1 th:text="${titulo}"></h1>
+        <ul>
+            <li><a th:href="@{/variables/string/} + 'Hola Esteban'">/variables/string/Hola Esteban</a></li>
+            <li><a th:href="@{/variables/string/} + 'Que tal Esteban'">/variables/string/Que tal Esteban</a></li>
+            <li><a th:href="@{/variables/string/} + ${'Hola Esteban'} + '/' + ${7}">/variables/string/Hola Esteban/7</a></li>
+        </ul>
     </body>
 </html>
