--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1 class="color-rojo" th:text="${titulo}"></h1>
         <h2 class="color-azul" th:text="${titulo}"></h2>
-        <img th:src="@{/images/avatars.jpg}"></img>
+        <img th:src="@{/images/avatars.jpg}" width="300" height="300">
         
     </body>
 </html>
